# mcp-sentinel

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sentinel/: __main__.py  server.py
tests/: test_server.py
